<resources>
    <string name="app_name">Appita</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_fragment">Recipe Fragment</string>
    <string name="favorite_recipe_fragment">Favorite Recipe Fragment</string>
    <string name="food_joke_fragment">Food Joke Fragment</string>
    <string name="recipe_filter">Recipe Filter</string>
    <string name="no_internet">No Internet!!</string>

    // Bottom Sheet
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">FingerFood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="diet_type">Diet Type</string>
    <string name="apply">Apply</string>
    <string name="search">Search</string>

    <string name="your_favorite_recipes_are_here">Your favorite recipes are here!</string>
    <string name="add_recipes_to_favorite_to_see_them_here">Add recipes to favorite to see them here!</string>
    <string name="delete_recipe">Delete Recipe</string>
    <string name="ready_to_cook_something_tasty">Ready to cook something tasty?</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="search_your_recipes_here">Search your recipes here!</string>
    <string name="splash_icon">Splash Icon</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="system_default">System Default</string>
    <string name="about">About</string>
    <string name="app_version">Appita 1.0.0</string>
</resources>