<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background_color"
        android:orientation="vertical"
        tools:context=".ui.SettingActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/settings"
            android:textColor="?attr/text_color"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/themeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/theme"
                android:src="@drawable/ic_theme"
                app:tint="?attr/text_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/theme"
                    android:textColor="?attr/text_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/theme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system_default"
                    android:textColor="?attr/sub_text_color"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/aboutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/about"
                android:src="@drawable/ic_info"
                app:tint="?attr/text_color" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textColor="?attr/text_color"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/app_version"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_version"
                    android:textColor="?attr/sub_text_color"
                    android:textSize="16sp" />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</layout>